<resources>
    <string name="app_name">AppTaxi 114 - Conductor</string>
    <!-- <string name="app_url">http://radiotaxi114.ddns.net:777/apptaxi114</string>
    <string name="app_url2">http://radiotaxi114.ddns.net:777/sistaxi114</string>-->
    <!--<string name="app_url">http://radiotaxi114.site/apptaxi114</string>-->
    <!-- <string name="app_url2">http://radiotaxi114.ddns.net:777/sistaxi114</string>-->
    <string name="app_url">http://rt114.ddns.net:8080/apptaxi114</string>
    <string name="app_url2">http://192.168.0.16/SISTEMAS/SISTAXI114/apptaxi114</string>
    <string name="app_url_ubicacion">http://rt114.ddns.net:8080/apptaxi114-ubicacion</string>

    <string name="app_titulo">AppTaxi 114 - Conductor</string>
    <string name="app_lema">Seguridad y Rapidez</string>

    <string name="action_inicio">Inicio</string>

    <string name="action_aviso">Aviso</string>
    <string name="action_alerta">Alerta</string>
    <string name="action_ver_alerta">Ver Alerta</string>

    <string name="action_ocultar_mapa">Ocultar Mapa</string>
    <string name="action_mostrar_mapa">Mostrar Mapa</string>





    <string name="action_compartir">Compartir</string>

    <string name="action_radio">Radio Virtual</string>

    <string name="action_crear_cuenta">Crear Cuenta</string>
    <string name="action_historial">Historial</string>
    <string name="action_favoritos">Mis Favoritos</string>
    <string name="action_modulo_supervisor">Supervisores</string>
    <string name="action_registrar_incidente">Incidentes</string>
    <string name="action_datos">Mis Datos</string>
    <string name="action_leyenda">Leyenda</string>
    <string name="action_recepcion_archivos">Archivos</string>
    <string name="action_ranking">Ranking</string>

    <string name="action_actualizar_parametro">Actualizar Parametros</string>
    <string name="action_preferencias">Preferencias</string>
    <string name="action_mis_preferencias">Preferencias</string>


    <string name="action_ajustes_gps">Ajustes GPS</string>
    <string name="action_cerrar_sesion">Cerrar Sesion</string>
    <string name="action_acerca_de">Acerca De</string>
    <string name="action_salir">Salir</string>

    <string name="action_registrar_alerta1">Alerta de Choque</string>
    <string name="action_registrar_alerta2">Alerta de Robo</string>
    <string name="action_registrar_alerta3">Alerta de Operativo</string>
    <string name="action_registrar_alerta4">Servicio Libre</string>

    <string name="action_cambiar_cobertura1">Cobertura 1km</string>
    <string name="action_cambiar_cobertura2">Cobertura 2km</string>
    <string name="action_cambiar_cobertura3">Cobertura 3km</string>
    <string name="action_cambiar_cobertura4">Cobertura 4km</string>
    <string name="action_cambiar_cobertura5">Cobertura 5km</string>
    <string name="action_cambiar_cobertura6">Cobertura 6km</string>
    <string name="action_cambiar_cobertura7">Cobertura 7km</string>
    <string name="action_cambiar_cobertura8">Cobertura 8km</string>
    <string name="action_cambiar_cobertura9">Cobertura 9km</string>
    <string name="action_cambiar_cobertura10">Cobertura 10km</string>
    <string name="action_cambiar_cobertura0">Cobertura Ilimitado</string>

    <string name="action_reportar_ubicacion">Reportar Ubicacion</string>


    <string name="action_actualizar_conductor_datos">Actualizar</string>
    <string name="action_listar_supervisores">Agenda Supervisores   </string>
    <string name="action_ampliar_mapa">Ampliar Mapa</string>
    <string name="action_reducir_mapa">Reducir Mapa</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_soporte">Administración</string>
    <string name="action_info">Info</string>
    <string name="action_listar_operadoras">Operadores</string>


    <string name="title_activity_historial">Historial</string>
    <string name="title_activity_monitoreo">Monitoreo</string>
    <string name="title_activity_pedido_cliente">PedidoCliente</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pedido_detalle">Info del Pedido</string>
    <string name="title_activity_pedido_actual">Pedido Actual</string>
    <string name="title_activity_pedido_cancelar">PedidoCancelarActivity</string>
    <string name="title_activity_radar">Mapa</string>
    <string name="title_activity_mis_datos">Mis Datos</string>
    <string name="title_activity_recepcion_archivos">Archivos</string>
    <string name="title_activity_leyenda">Leyenda</string>

    <string name="title_activity_pedido_cancelacion">Cancelar Pedido</string>
    <string name="title_activity_pedido_monitoreo">PedidoMonitoreoActivity</string>
    <string name="title_activity_mis_preferencias">Preferencias</string>
    <string name="title_activity_conductor_faltas">ConductorFaltasActivity</string>
    <string name="title_activity_pedido_actual_foto">Foto Adjunta</string>
    <string name="title_activity_buscar_conductor">Buscar Conductor</string>
    <string name="title_activity_conductor_actual">Datos del Conductor</string>
    <string name="title_activity_supervisor">Supervisores</string>
    <string name="title_activity_registrar_incidente">Reportar Incidente</string>
    <string name="title_activity_conductor_ubicacion">Ubicación del Conductor</string>
    <string name="title_activity_radio">Radio Virtual</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_conductor_alerta_actual">Alertas</string>
    <string name="title_activity_listar_supervisores">Agenda Inspectores</string>
    <string name="title_activity_conductor_alertas">Alertas</string>

    <string name="message_error_interno">Lo sentimos ha ocurrido un error interno</string>
    <string name="message_no_proceso">Lo sentimos no hemos podido cargar la informacion, intente nuevamente</string>
    <string name="message_no_identificador">Lo sentimos no hemos podido identificar su equipo</string>
    <string name="message_no_internet">Ha ocurrido un error, verifique que tenga una conexión a internet activa.</string>

    <string name="app_title">RADIO TAXI 114</string>
    <string name="alert_title">RADIO TAXI 114</string>
    <string name="app_subtitle">Seguridad y rapidez</string>
    <string name="app_version">RadioTaxi114 v1.67</string>
    <string name="app_version_numero">1.67</string>

    <string name="app_compartir">https://play.google.com/store/apps/details?id=raditaxi114.radiotaxiv6</string>
    <string name="app_compartir_sub">https://play.google.com/store/apps/details?id=radiotaxi114.radiotaxiv6 Descarga nuestra aplicación y haz tus pedidos</string>


    <string name="webservice_jnconductor">JnConductorv8.php</string>
    <string name="webservice_jncliente">JnClientev4.php</string>
    <string name="webservice_jnconductoralerta">JnConductorAlerta.php</string>
    <string name="webservice_jnreporteubicacion">JnReporteUbicacion.php</string>
    <string name="webservice_jncentralmensaje">JnCentralMensaje.php</string>
    <string name="webservice_jnaplicacion">JnAplicacion.php</string>
    <string name="webservice_jnversion">JnVersion.php</string>
    <!-- <string name="webservice_jnmodulosupervisor">JnModuloSupervisor.php</string>-->
    <string name="webservice_jnconductorsupervisor">JnConductorSupervisor.php</string>
    <string name="webservice_jnpedido">JnPedidov9.php</string>
    <string name="webservice_jnradar">JnRadar.php</string>
    <string name="webservice_jnsoportecontacto">JnSoporteContacto.php</string>
    <string name="webservice_jnconductorubicacion">JnConductorUbicacionv3.php</string>
    <string name="webservice_jnconductormensaje">JnConductorMensaje.php</string>
    <string name="webservice_jnsector">JnSector.php</string>
    <string name="webservice_jnregion">JnRegion.php</string>
    <string name="webservice_jnpublicidad">JnPublicidad.php</string>
    <string name="webservice_jnoperadora">JnOperadora.php</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_titulo1">Menu</string>
    <string name="action_titulo2">Operacion</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_soporte">Soporte</string>
    <string name="title_activity_historial_detalle">Info. de Pedido</string>
    <string name="title_activity_pedido_cliente2">PedidoClienteActivity2</string>
    <string name="title_activity_operadoras">Lista de Operadores</string>
    <string name="title_activity_iniciar_viaje">IniciarViajeActivity</string>
    <!--  <string name="title_activity_listar_supervisores_activityv2">ListarSupervisoresActivityv2
    </string>
    <string name="title_activity_buscar_conductor_activityv2">BuscarConductorActivityv2</string>
    <string name="title_activity_conductor_actual_activityv2">ConductorActualActivityv2</string>
    <string name="title_activity_conductor_alerta_actual_activityv2">ConductorAlertaActualActivityv2</string>
    <string name="title_activity_conductor_ubicacion_activityv2">ConductorUbicacionActivityv2
    </string>
    <string name="title_activity_pedido_actual_activityv2">PedidoActualActivityv2</string>
    <string name="title_activity_pedido_detalle_activityv2">PedidoDetalleActivityv2</string>
    <string name="title_activity_conductor_alertas_activityv2">ConductorAlertasActivityv2</string>
    <string name="title_activity_pedido_cancelacion_activityv2">PedidoCancelacionActivityv2</string>
    <string name="title_activity_radio_activityv2">RadioActivityv2</string>
    <string name="title_activity_mis_datos_activityv2">MisDatosActivityv2</string>
    <string name="title_activity_registrar_incidente_activityv2">RegistrarIncidenteActivityv2
    </string>-->

</resources>
