<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="radiotaxi114.radiotaxi114v6.PedidoActualActivity">


    <!--
    <item android:id="@+id/action_compartir" android:title="@string/action_compartir"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@mipmap/icon_compartir50" />
-->

    <item android:id="@+id/action_aviso" android:title="@string/action_aviso"
        app:showAsAction="always" android:icon="@mipmap/icon_mensaje50">
    </item>


    <item android:id="@+id/action_info" android:title="@string/action_info"
        android:orderInCategory="100" app:showAsAction="always"  android:icon="@mipmap/icon_info50"  />


    <item android:id="@+id/action_ampliar_mapa" android:title="@string/action_ampliar_mapa"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@mipmap/icon_mapa50" />

    <item android:id="@+id/action_reducir_mapa" android:title="@string/action_reducir_mapa"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@mipmap/icon_mapa50" />



    <item android:id="@+id/action_mostrar_mapa" android:title="@string/action_mostrar_mapa"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@mipmap/icon_mapa50" />

    <item android:id="@+id/action_ocultar_mapa" android:title="@string/action_ocultar_mapa"
        android:orderInCategory="100" app:showAsAction="never" android:icon="@mipmap/icon_mapa50" />


    <!--<item android:id="@+id/action_mostrar_mapa" android:title="@string/action_mostrar_mapa"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@mipmap/icon_mapa50" />
-->


    <item android:id="@+id/action_reportar_ubicacion" android:title="@string/action_reportar_ubicacion"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@mipmap/icon_mapa50" />



    <item android:id="@+id/action_ver_alerta" android:title="@string/action_ver_alerta"
        app:showAsAction="always" android:icon="@mipmap/icon_ver_alerta50">
    </item>

    <item android:id="@+id/action_alerta" android:title="@string/action_alerta"
        app:showAsAction="never" android:icon="@mipmap/icon_alerta50"
        >
        <menu>
            <group android:id="@+id/grupo2">

                <item android:id="@+id/action_registrar_alerta1" android:title="@string/action_registrar_alerta1"
                    android:orderInCategory="100" app:showAsAction="ifRoom" />

                <item android:id="@+id/action_registrar_alerta2" android:title="@string/action_registrar_alerta2"
                    android:orderInCategory="100" app:showAsAction="ifRoom" />

                <item android:id="@+id/action_registrar_alerta3" android:title="@string/action_registrar_alerta3"
                    android:orderInCategory="100" app:showAsAction="ifRoom" />

                <item android:id="@+id/action_registrar_alerta4" android:title="@string/action_registrar_alerta4"
                    android:orderInCategory="100" app:showAsAction="ifRoom" />

            </group>
        </menu>
    </item>


    <!--
        <item android:id="@+id/action_compartir" android:title="@string/action_compartir"
            android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@mipmap/icon_compartir50" />

        <item android:id="@+id/action_acerca_de" android:title="@string/action_acerca_de"
            android:orderInCategory="100" app:showAsAction="never" />

        -->
    <!--
        <item android:id="@+id/action_salir" android:title="@string/action_salir"
            android:orderInCategory="100" app:showAsAction="never" />-->
</menu>
